<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/upload_picture_here"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddUpdateRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp" />

                <Button
                    android:id="@+id/btnChooseImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:text="@string/choose_image" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerRecipeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"/>

            <EditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"
                android:inputType="text"
                android:lines="1" />

            <EditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/detail_ingredients_label"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/etSteps"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/detail_steps_label"
                android:inputType="textMultiLine" />

        </LinearLayout>
</ScrollView>
